Taller 17: Typed Query y Named Query